Version 0.0.3
---------------------------------------------------------------------------
15 February 2007
+ Added translate functions.