@@ -38,7 +38,6 @@ class Clipboard
 
     function view()
     {
-        translate('clipboard');
         $clip = $_SESSION['Clipboard']->components[$_REQUEST['key']]->content;
         $clip =  sprintf('<textarea cols="35" rows="4">%s</textarea>', $clip);
    
@@ -49,7 +48,6 @@ class Clipboard
         $button = _('Close Window');
         $template['BUTTON'] = sprintf('<input type="button" onclick="window.close()" value="%s" />', $button);
         Layout::nakedDisplay(PHPWS_Template::process($template, 'clipboard', 'clipboard.tpl'));
-        translate();
     }
 
 
@@ -80,7 +78,6 @@ class Clipboard
             $content[] = Layout::getJavascript('open_window', $data) . ' ' . $drop;
         }
 
-        translate('clipboard');
         unset($clipVars['key']);
         $clipVars['action'] = 'clear';
         $template['CLEAR'] = PHPWS_Text::moduleLink(_('Clear'), 'clipboard', $clipVars);
@@ -92,7 +89,6 @@ class Clipboard
         $layout = PHPWS_Template::process($vars, 'clipboard', 'show.tpl');
 
         Layout::set($layout, 'clipboard', 'clipboard');
-        translate();
     }
 
     function init()
